[gd_scene load_steps=5 format=3 uid="uid://qrkrnqv83mlo"]

[ext_resource type="PackedScene" uid="uid://cjr6ohxpla21y" path="res://ui/hud/topbar/player_container.tscn" id="1_p7omu"]
[ext_resource type="Script" path="res://ui/hud/hud.gd" id="1_u3fl6"]
[ext_resource type="PackedScene" uid="uid://bdiyvjr8vmj16" path="res://ui/hud/bottombar/player_portrait.tscn" id="2_c5cbr"]
[ext_resource type="PackedScene" uid="uid://8fl1fpgt8df1" path="res://ui/hud/sidebar/inventory/side_bar.tscn" id="4_0oc01"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_u3fl6")

[node name="PlayerContainer1" parent="." instance=ExtResource("1_p7omu")]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="PlayerContainer2" parent="." instance=ExtResource("1_p7omu")]
unique_name_in_owner = true
anchor_left = 0.25
anchor_right = 0.5
grow_vertical = 1
metadata/_edit_lock_ = true

[node name="PlayerContainer3" parent="." instance=ExtResource("1_p7omu")]
unique_name_in_owner = true
anchor_left = 0.5
anchor_right = 0.75
offset_right = -0.00012207
grow_vertical = 1
metadata/_edit_lock_ = true

[node name="PlayerContainer4" parent="." instance=ExtResource("1_p7omu")]
unique_name_in_owner = true
anchor_left = 0.75
anchor_right = 1.0
offset_left = -0.00012207
grow_vertical = 1
metadata/_edit_lock_ = true

[node name="PlayerPortrait" parent="." instance=ExtResource("2_c5cbr")]
unique_name_in_owner = true
metadata/_edit_lock_ = true

[node name="SideBar" parent="." instance=ExtResource("4_0oc01")]
custom_minimum_size = Vector2(1920, 1080)
size_flags_horizontal = 3
size_flags_vertical = 3
